# mailing_main

./: .env_template  README.md  blogs.json  clients.json  group.json  mailings.json  notifications.json  permisions.json  pyproject.toml
blog/: forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_owner.py  0003_blog_slug.py  0004_blog_published.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  emailing.py  forms.py  models.py  urls.py  views.py
main/management/commands/: mailing_time.py  runapscheduler.py
main/migrations/: 0001_initial.py  0002_client_owner_mailing_owner_message_owner.py  0003_rename_first_sending_time_mailing_first_sending_and_more.py  0004_attempt_owner_alter_attempt_status.py  0005_remove_message_mailing_mailing_message.py  0006_notification_remove_mailing_message_delete_message_and_more.py  0007_alter_attempt_attempt_date.py  0008_rename_attempt_date_attempt_attempt_time.py  0009_attempt_client.py  0010_alter_mailing_options.py  0011_alter_mailing_notification.py  0012_mailing_block_sending.py
main/static/css/: bootstrap.css
main/templates/includes/: inc_main_menu.html
main/templates/main/: attempt_list.html  base.html  client_confirm_delete.html  client_detail.html  client_form.html  (+14 more)
main/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_token_user_code.py  0003_alter_user_options.py
(+9 files in other folders)
