[tool.poetry]
name = "mailing-main"
version = "0.1.0"
description = ""
authors = ["Glushkov Alex <avgl@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
ipython = "^8.26.0"
pytils = "^0.4.1"
redis = "^5.0.8"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
